# oskhen-task-17

./: InfContsolve.py  LAB2.py  README.md  a  as  backup  ordlista  ordlista.txt  ordlistaMODIFIED.txt
Levehnstein/: Cargo.toml  diagbench  kattis  normbench
Levehnstein/src/: kattis.rs  main.rs
old/: BLOCKsolve.py  BUSolve.py
python/: InfContsolve.py
python/old/: LAB2.py
test/: ordlistaMODIFIED.txt  orkaWORDS
