[package]
name = "Levehnstein"
version = "0.1.0"
authors = ["oskhen <oskar.henriksson2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
bench = []
diagonal = []
filled = []
diagonal_old = []
debug = []
debug_specific = ["debug"]
default = ["filled"]